chore: backport configurable DatabaseCtx
Refs: XRDDEV-2837